比較演算子バグFix

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
 					"kind": "bin"
 				}
 			},
-			"args": [" (5 + 6) * 7 "],
+			"args": [" (5 + 6) * 7 >= (5*6)+7 "],
 			"cwd": "${workspaceFolder}"
 		},
 		{
